--- a/app/src/main/res/menu/login_navigation.xml
+++ b/app/src/main/res/menu/login_navigation.xml
@@ -3,12 +3,15 @@
 
     <item
         android:id="@+id/login_navigation_login"
-        android:checkable="false"
+        android:checkable="true"
+        android:enabled="true"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_login" />
+        android:title="@string/title_login"
+        android:visible="true" />
 
     <item
         android:id="@+id/login_navigation_create_account"
+        android:checkable="true"
         android:enabled="true"
         android:icon="@drawable/ic_account_circle_black_24dp"
         android:title="@string/title_create_account"
@@ -16,6 +19,7 @@
 
     <item
         android:id="@+id/login_navigation_reset_password"
+        android:checkable="true"
         android:enabled="true"
         android:icon="@drawable/ic_help_outline_black_24dp"
         android:title="@string/title_reset_password"
@@ -23,10 +27,11 @@
 
     <item
         android:id="@+id/login_navigation_exit"
+        android:checkable="true"
         android:enabled="true"
         android:icon="@drawable/ic_exit_to_app_black_24dp"
         android:title="@string/title_exit"
-        android:visible="true"></item>
+        android:visible="true"/>
 
 
 </menu>
