--- a/app/src/main/res/layout/home_page_librarian.xml
+++ b/app/src/main/res/layout/home_page_librarian.xml
@@ -11,7 +11,7 @@
         android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/member_home"
+        android:text="@string/librarian_home"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
