--- a/app/src/main/res/layout/home_page_admin.xml
+++ b/app/src/main/res/layout/home_page_admin.xml
@@ -6,7 +6,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_user"
+    android:background="@drawable/background_admin"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/hometxt"
                 android:layout_marginTop="6dp"
-                android:text="Welcome to LibSys Mobile"
+                android:text="LibSys Mobile - Admin"
                 android:textColor="#FFFF"
                 android:textSize="16sp" />
 
@@ -75,14 +75,14 @@
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/browse" />
+                        android:src="@drawable/unlock_user" />
 
                     <TextView
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="Browse"
+                        android:text="Unlock User"
                         android:textColor="#000"
                         android:textStyle="bold"
                         android:textSize="18sp" />
@@ -110,7 +110,7 @@
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/search" />
+                        android:src="@drawable/manage_users" />
 
                     <TextView
                         android:textColor="#000"
@@ -118,7 +118,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="Search"
+                        android:text="Manage User"
                         android:textSize="18sp" />
 
                 </LinearLayout>
@@ -144,13 +144,13 @@
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/adv_search" />
+                        android:src="@drawable/set_fine" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="Search+"
+                        android:text="Set Fine"
                         android:textColor="#000"
                         android:textStyle="bold"
                         android:textSize="18sp" />
@@ -178,13 +178,13 @@
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/extend" />
+                        android:src="@drawable/issue_fine" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="Extend"
+                        android:text="Issue Fine"
                         android:textColor="#000"
                         android:textStyle="bold"
                         android:textSize="18sp" />
@@ -193,77 +193,11 @@
 
             </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="15dp"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="60dp" >
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="10dp">
-
-                    <ImageView
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/my_account" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
-                        android:text="My Account"
-                        android:textColor="#000"
-                        android:textStyle="bold"
-                        android:textSize="18sp" />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="15dp"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="60dp" >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="10dp">
-
-                    <ImageView
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/help" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
-                        android:text="Help"
-                        android:textColor="#000"
-                        android:textStyle="bold"
-                        android:textSize="18sp" />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
 
         </GridLayout>
 
     </LinearLayout>
 
 
-    </ScrollView>
+</ScrollView>
