Updated application to connect with database: Creation of Query classes to access database php scripts Create account Page:  Ability to create new account  Error if account exists. Login Page:  Ability to login using correct credentials  Error if account does not exists.  Error on invalid entry.

--- a/app/src/main/res/layout/home_page_librarian.xml
+++ b/app/src/main/res/layout/home_page_librarian.xml
@@ -11,7 +11,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -31,14 +31,14 @@
                 android:textSize="24sp" />
 
             <TextView
-                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/hometxt"
                 android:layout_marginTop="6dp"
-                android:text="Welcome to LibSys Mobile"
+                android:text="LibSys Mobile- Librarian"
                 android:textColor="#FFFF"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <ImageView
                 android:layout_width="62dp"
@@ -72,10 +72,11 @@
                     android:orientation="vertical"
                     android:padding="10dp">
 
-                    <ImageView
+                    <ImageButton
+                        android:id="@+id/btn_SearchMember"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/search_member" />
+                        app:srcCompat="@drawable/search_member" />
 
                     <TextView
 
@@ -107,7 +108,8 @@
                     android:orientation="vertical"
                     android:padding="10dp">
 
-                    <ImageView
+                    <ImageButton
+                        android:id="@+id/btn_librarian_searchBook"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:src="@drawable/search" />
@@ -141,7 +143,7 @@
                     android:orientation="vertical"
                     android:padding="10dp">
 
-                    <ImageView
+                    <ImageButton
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:src="@drawable/add_book" />
@@ -175,7 +177,7 @@
                     android:orientation="vertical"
                     android:padding="10dp">
 
-                    <ImageView
+                    <ImageButton
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:src="@drawable/remove_book" />
@@ -209,7 +211,7 @@
                     android:orientation="vertical"
                     android:padding="10dp">
 
-                    <ImageView
+                    <ImageButton
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:src="@drawable/issue_book" />
@@ -243,7 +245,7 @@
                     android:orientation="vertical"
                     android:padding="10dp">
 
-                    <ImageView
+                    <ImageButton
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:src="@drawable/return_book" />
@@ -277,7 +279,7 @@
                     android:orientation="vertical"
                     android:padding="10dp">
 
-                    <ImageView
+                    <ImageButton
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:src="@drawable/edit" />
@@ -311,7 +313,7 @@
                     android:orientation="vertical"
                     android:padding="10dp">
 
-                    <ImageView
+                    <ImageButton
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:src="@drawable/pay_balance" />
