--- a/app/src/main/res/layout/home_page_admin.xml
+++ b/app/src/main/res/layout/home_page_admin.xml
@@ -72,10 +72,11 @@
                     android:orientation="vertical"
                     android:padding="10dp">
 
-                    <ImageView
+                    <ImageButton
+                        android:id="@+id/btn_admin_unlockUser"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/unlock_user" />
+                        app:srcCompat="@drawable/unlock_user" />
 
                     <TextView
 
@@ -84,8 +85,8 @@
                         android:layout_marginTop="12dp"
                         android:text="Unlock User"
                         android:textColor="#000"
-                        android:textStyle="bold"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -107,7 +108,8 @@
                     android:orientation="vertical"
                     android:padding="10dp">
 
-                    <ImageView
+                    <ImageButton
+                        android:id="@+id/btn_admin_manageUser"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:src="@drawable/manage_users" />
@@ -141,7 +143,8 @@
                     android:orientation="vertical"
                     android:padding="10dp">
 
-                    <ImageView
+                    <ImageButton
+                        android:id="@+id/btn_admin_setFine"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:src="@drawable/set_fine" />
@@ -175,7 +178,8 @@
                     android:orientation="vertical"
                     android:padding="10dp">
 
-                    <ImageView
+                    <ImageButton
+                        android:id="@+id/btn_admin_issueFine"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:src="@drawable/issue_fine" />
