--- a/app/src/main/res/layout/home_page_member.xml
+++ b/app/src/main/res/layout/home_page_member.xml
@@ -11,7 +11,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -31,14 +31,14 @@
                 android:textSize="24sp" />
 
             <TextView
-                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/hometxt"
                 android:layout_marginTop="6dp"
-                android:text="Welcome to LibSys Mobile"
+                android:text="LibSys Mobile- Member"
                 android:textColor="#FFFF"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <ImageView
                 android:layout_width="62dp"
@@ -73,6 +73,7 @@
                     android:padding="10dp">
 
                     <ImageView
+                        android:id="@+id/btn_member_browse"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:src="@drawable/browse" />
@@ -107,7 +108,8 @@
                     android:orientation="vertical"
                     android:padding="10dp">
 
-                    <ImageView
+                    <ImageButton
+                        android:id="@+id/btn_member_search"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:src="@drawable/search" />
