--- a/app/src/main/res/layout/login_login_page.xml
+++ b/app/src/main/res/layout/login_login_page.xml
@@ -5,7 +5,7 @@
     android:id="@+id/login_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Pages.LoginPage">
+    tools:context=".login_pages.LoginPage">
 
 
     <TextView
