--- a/app/src/main/res/layout/login_reset_password_page.xml
+++ b/app/src/main/res/layout/login_reset_password_page.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Pages.ResetPasswordPage">
+    tools:context=".login_pages.ResetPasswordPage">
 
 
     <android.support.design.widget.BottomNavigationView
