--- a/app/src/main/res/layout/home_page_librarian.xml
+++ b/app/src/main/res/layout/home_page_librarian.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_user"
-    tools:context=".MainActivity">
+    tools:context=".login_pages.LoginPage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,9 +48,9 @@
         </RelativeLayout>
 
         <GridLayout
-            android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:alignmentMode="alignMargins"
             android:columnCount="2"
             android:columnOrderPreserved="false"
@@ -63,7 +63,7 @@
                 android:layout_columnWeight="1"
                 android:layout_margin="15dp"
                 app:cardCornerRadius="15dp"
-                app:cardElevation="60dp" >
+                app:cardElevation="60dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -85,8 +85,8 @@
                         android:layout_marginTop="12dp"
                         android:text="Search Member"
                         android:textColor="#000"
-                        android:textStyle="bold"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -99,7 +99,7 @@
                 android:layout_columnWeight="1"
                 android:layout_margin="15dp"
                 app:cardCornerRadius="15dp"
-                app:cardElevation="60dp" >
+                app:cardElevation="60dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -115,13 +115,13 @@
                         android:src="@drawable/search" />
 
                     <TextView
-                        android:textColor="#000"
-                        android:textStyle="bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
                         android:text="Search Book"
-                        android:textSize="18sp" />
+                        android:textColor="#000"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -134,7 +134,7 @@
                 android:layout_columnWeight="1"
                 android:layout_margin="15dp"
                 app:cardCornerRadius="15dp"
-                app:cardElevation="60dp" >
+                app:cardElevation="60dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -146,192 +146,24 @@
                     <ImageButton
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/add_book" />
+                        android:src="@drawable/adjust_inventory" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="Add Book"
+                        android:text="Adjust Inventory"
                         android:textColor="#000"
-                        android:textStyle="bold"
-                        android:textSize="18sp" />
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="15dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="60dp" >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="10dp">
-
-                    <ImageButton
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/remove_book" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
-                        android:text="Remove Book"
-                        android:textColor="#000"
-                        android:textStyle="bold"
-                        android:textSize="18sp" />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="15dp"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="60dp" >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="10dp">
-
-                    <ImageButton
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/issue_book" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
-                        android:text="Issue Book"
-                        android:textColor="#000"
-                        android:textStyle="bold"
-                        android:textSize="18sp" />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="15dp"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="60dp" >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="10dp">
-
-                    <ImageButton
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/return_book" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
-                        android:text="Return Book"
-                        android:textColor="#000"
-                        android:textStyle="bold"
-                        android:textSize="18sp" />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="15dp"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="60dp" >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="10dp">
-
-                    <ImageButton
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/edit" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
-                        android:text="Modify/Edit"
-                        android:textColor="#000"
-                        android:textStyle="bold"
-                        android:textSize="18sp" />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="15dp"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="60dp" >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="10dp">
-
-                    <ImageButton
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/pay_balance" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
-                        android:text="Pay Balance"
-                        android:textColor="#000"
-                        android:textStyle="bold"
-                        android:textSize="18sp" />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
 
         </GridLayout>
+
 
     </LinearLayout>
 
