--- a/app/src/main/res/layout/manage_member.xml
+++ b/app/src/main/res/layout/manage_member.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/hometxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Home"
+                android:text="Manage Account"
                 android:textColor="#FFFF"
                 android:textSize="24sp" />
 
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/hometxt"
                 android:layout_marginTop="6dp"
-                android:text="LibSys Mobile- Member"
+                android:text="LibSys Mobile - Librarian"
                 android:textColor="#FFFF"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -76,14 +76,14 @@
                         android:id="@+id/btn_member_browse"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/browse" />
+                        android:src="@drawable/issue_book" />
 
                     <TextView
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="Browse"
+                        android:text="Issue Book"
                         android:textColor="#000"
                         android:textStyle="bold"
                         android:textSize="18sp" />
@@ -112,7 +112,7 @@
                         android:id="@+id/btn_member_search"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/search" />
+                        android:src="@drawable/return_book" />
 
                     <TextView
                         android:textColor="#000"
@@ -120,7 +120,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="Search"
+                        android:text="Return Book"
                         android:textSize="18sp" />
 
                 </LinearLayout>
@@ -146,13 +146,13 @@
                     <ImageButton
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/adv_search" />
+                        android:src="@drawable/pay_balance" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="Search+"
+                        android:text="Pay Balance"
                         android:textColor="#000"
                         android:textStyle="bold"
                         android:textSize="18sp" />
@@ -201,7 +201,7 @@
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_margin="15dp"
-                app:cardCornerRadius="12dp"
+                app:cardCornerRadius="15dp"
                 app:cardElevation="60dp" >
 
                 <LinearLayout
@@ -214,13 +214,13 @@
                     <ImageButton
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:src="@drawable/my_account" />
+                        android:src="@drawable/issue_fine" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="My Account"
+                        android:text="Issue Fine"
                         android:textColor="#000"
                         android:textStyle="bold"
                         android:textSize="18sp" />
@@ -229,43 +229,10 @@
 
             </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="15dp"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="60dp" >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="10dp">
-
-                    <ImageButton
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/help" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
-                        android:text="Help"
-                        android:textColor="#000"
-                        android:textStyle="bold"
-                        android:textSize="18sp" />
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
 
         </GridLayout>
 
     </LinearLayout>
 
 
-    </ScrollView>
+</ScrollView>
