Implemented navigation bar for member

--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="@dimen/activity_horizontal_margin2"
-            android:layout_weight="0.30"
+            android:layout_weight="0.20"
             android:gravity="center_vertical"
             android:orientation="vertical">
 
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="@dimen/activity_horizontal_margin2"
-            android:layout_weight="0.50"
+            android:layout_weight="0.65"
             android:gravity="top|center_vertical"
             android:orientation="vertical">
 
@@ -73,6 +73,7 @@
                     android:drawableStart="@drawable/mail_white"
                     android:drawablePadding="20dp"
                     android:hint="Email"
+                    android:layout_margin="16dp"
                     android:inputType="textEmailAddress"
                     android:padding="20dp"
                     android:textColor="@android:color/black"
@@ -82,10 +83,10 @@
                     android:id="@+id/new_first_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                     android:drawableStart="@drawable/login_user"
                     android:drawablePadding="20dp"
                     android:hint="First Name"
+                    android:layout_margin="16dp"
                     android:inputType="textPersonName"
                     android:padding="20dp"
                     android:textColor="@android:color/black"
@@ -95,9 +96,9 @@
                     android:id="@+id/new_last_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                     android:drawableStart="@drawable/login_user"
                     android:drawablePadding="20dp"
+                    android:layout_margin="@dimen/activity_horizontal_margin"
                     android:hint="Last Name"
                     android:inputType="textPersonName"
                     android:padding="20dp"
@@ -108,10 +109,10 @@
                     android:id="@+id/new_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                     android:drawableStart="@drawable/lock_black"
                     android:drawablePadding="20dp"
                     android:hint="Password"
+                    android:layout_margin="16dp"
                     android:inputType="textPassword"
                     android:padding="20dp"
                     android:textColor="@android:color/black"
