--- a/app/src/main/res/menu/nav_drawer_member.xml
+++ b/app/src/main/res/menu/nav_drawer_member.xml
@@ -4,21 +4,26 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
-        <item android:id="@+id/nav_item1"
-            android:icon="@drawable/ic_home_black_24dp"
-            android:title="Home"/>
-        <item android:id="@+id/nav_item2"
-            android:icon="@drawable/ic_dashboard_black_24dp"
-            android:title="Search"/>
-        <item android:id="@+id/nav_item3"
-            android:icon="@drawable/libsys_icon"
-            android:title="Extend Rental"/>
-        <item android:id="@+id/nav_item4"
-            android:icon="@drawable/ic_dashboard_black_24dp"
-            android:title="My Account"/>
-        <item android:id="@+id/nav_item5"
-            android:icon="@drawable/ic_exit_to_app_black_24dp"
-            android:title="Logout"/>
+        <item
+            android:id="@+id/nav_home_member"
+            android:icon="@drawable/ic_home_24"
+            android:title="Home" />
+        <item
+            android:id="@+id/nav_search_book_member"
+            android:icon="@drawable/ic_search_24"
+            android:title="Search" />
+        <item
+            android:id="@+id/nav_extend_member"
+            android:icon="@drawable/ic_extend_24"
+            android:title="Extend Rental" />
+        <item
+            android:id="@+id/nav_account_member"
+            android:icon="@drawable/ic_account_24"
+            android:title="My Account" />
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_logout_24"
+            android:title="Logout" />
     </group>
 
 </menu>
