--- a/app/src/main/res/layout/home_page_member.xml
+++ b/app/src/main/res/layout/home_page_member.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background_user"
     android:fitsSystemWindows="true"
-    tools:context=".MainActivity"
+    tools:context=".user_home_pages.MemberHomePage"
     tools:openDrawer="start">
 
     <LinearLayout
