--- a/app/src/main/res/layout/extend_rental.xml
+++ b/app/src/main/res/layout/extend_rental.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_user"
-    tools:context=".pages.SearchBookPage">
+    tools:context=".pages.ExtendRentalPage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +24,7 @@
                 android:id="@+id/hometxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Search For Book"
+                android:text="Extend a rental"
                 android:textColor="#FFFF"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -47,31 +47,15 @@
             android:padding="16dp">
 
             <ListView
-                android:id="@+id/listView_bookResults"
-                android:layout_width="375dp"
-                android:layout_height="419dp"
-                android:layout_marginTop="241dp"
+                android:id="@+id/listView_rentalResults"
+                android:layout_width="366dp"
+                android:layout_height="479dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.85"
+                app:layout_constraintHorizontal_bias="0.082"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Enter Title to Search:"
-                android:textColor="@color/textBlack"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.004"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.026"
-                tools:ignore="MissingConstraints" />
+                app:layout_constraintVertical_bias="0.0" />
 
             <EditText
                 android:id="@+id/et_search_book_title"
@@ -93,22 +77,23 @@
                 tools:ignore="MissingConstraints" />
 
             <Button
-                android:id="@+id/search_for_book_button"
+                android:id="@+id/search_for_book_button2"
                 android:layout_width="325dp"
                 android:layout_height="48dp"
                 android:layout_gravity="bottom"
                 android:layout_margin="24dp"
                 android:background="@drawable/btn_corner"
                 android:backgroundTint="@color/theme1green"
-                android:onClick="searchBookOnClick"
-                android:text="Search"
+                android:onClick="extendOnClick"
+                android:text="Extend"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.228"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.179"
+                app:layout_constraintVertical_bias="1.0"
                 tools:ignore="MissingConstraints" />
 
 
