--- a/app/src/main/res/layout/home_page_member.xml
+++ b/app/src/main/res/layout/home_page_member.xml
@@ -111,7 +111,7 @@
                     android:padding="10dp">
 
                     <ImageButton
-                        android:id="@+id/btn_member_search"
+                        android:id="@+id/btn_return_book"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:onClick="searchBookOnClick"
