--- a/app/src/main/res/layout/pay_balance.xml
+++ b/app/src/main/res/layout/pay_balance.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_user"
-    tools:context=".user_home_pages.LibrarianHomePage">
+    tools:context=".pages.PayBalancePage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,7 +60,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/activity_horizontal_margin2"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginTop="108dp"
                 android:layout_marginBottom="8dp"
                 android:text="Enter Member ID and Payment Amount"
@@ -70,6 +70,7 @@
                 app:layout_constraintBottom_toTopOf="@+id/pay_balance_member_id"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
                 tools:ignore="MissingConstraints" />
 
 
@@ -79,8 +80,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_margin="16dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:backgroundTint="@android:color/black"
                 android:drawableStart="@drawable/login_user"
                 android:drawablePadding="15dp"
@@ -89,10 +88,13 @@
                 android:paddingBottom="16dp"
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.375"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="255dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.164"
+                tools:ignore="MissingConstraints" />
 
             <EditText
                 android:id="@+id/pay_balance_amount"
@@ -100,10 +102,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_margin="16dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
                 android:backgroundTint="@android:color/black"
                 android:drawableStart="@drawable/ic_payment_24dp"
                 android:drawablePadding="15dp"
@@ -112,11 +110,11 @@
                 android:paddingBottom="16dp"
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black"
-                app:layout_constraintBottom_toTopOf="@+id/pay_balance_button"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.75"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/pay_balance_member_id"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.289"
                 tools:ignore="MissingConstraints" />
 
             <Button
@@ -126,18 +124,19 @@
                 android:layout_gravity="bottom"
                 android:layout_margin="24dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:background="@drawable/btn_corner"
                 android:backgroundTint="@color/theme1green"
                 android:onClick="payBalanceOnClick"
                 android:text="Submit Payment"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.25"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="508dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.62"
+                tools:ignore="MissingConstraints" />
 
 
         </android.support.constraint.ConstraintLayout>
