--- a/app/src/main/res/layout/add_book.xml
+++ b/app/src/main/res/layout/add_book.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_user"
-    tools:context=".user_home_pages.LibrarianHomePage">
+    tools:context=".pages.AddBookPage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -61,6 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:backgroundTint="@android:color/black"
                 android:drawableStart="@drawable/ic_book_24dp"
@@ -77,18 +78,20 @@
 
 
             <TextView
+                android:id="@+id/textView2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="21dp"
                 android:layout_margin="@dimen/activity_horizontal_margin2"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="108dp"
                 android:text="Enter Book Information"
                 android:textColor="@color/textBlack"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/add_book_id"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.078"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.072"
                 tools:ignore="MissingConstraints" />
 
 
@@ -141,7 +144,6 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:backgroundTint="@android:color/black"
                 android:drawableStart="@drawable/ic_book_24dp"
                 android:drawablePadding="15dp"
@@ -150,10 +152,13 @@
                 android:paddingBottom="16dp"
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.75"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="101dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.127"
+                tools:ignore="MissingConstraints" />
 
             <Button
                 android:id="@+id/add_book_button"
