--- a/app/src/main/res/layout/issue_book.xml
+++ b/app/src/main/res/layout/issue_book.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_user"
-    tools:context=".user_home_pages.LibrarianHomePage">
+    tools:context=".pages.IssueBookPage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -61,10 +61,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_margin="16dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
                 android:backgroundTint="@android:color/black"
                 android:drawableStart="@drawable/ic_book_24dp"
                 android:drawablePadding="15dp"
@@ -73,11 +69,12 @@
                 android:paddingBottom="16dp"
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black"
-                app:layout_constraintBottom_toTopOf="@+id/issue_book_button"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="0.375"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/issue_book_member_id"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.453"
                 tools:ignore="MissingConstraints" />
 
             <TextView
@@ -103,8 +100,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_margin="16dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:backgroundTint="@android:color/black"
                 android:drawableStart="@drawable/login_user"
                 android:drawablePadding="15dp"
@@ -113,11 +108,12 @@
                 android:paddingBottom="16dp"
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black"
+                app:layout_constraintBottom_toTopOf="@+id/issue_book_book_id"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.75"
+                app:layout_constraintHorizontal_bias="0.375"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="207dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="MissingConstraints" />
 
             <Button
                 android:id="@+id/issue_book_button"
@@ -125,19 +121,21 @@
                 android:layout_height="44dp"
                 android:layout_gravity="bottom"
                 android:layout_margin="24dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"
                 android:background="@drawable/btn_corner"
                 android:backgroundTint="@color/theme1green"
                 android:onClick="issueBookOnClick"
                 android:text="Issue Book"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.75"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="475dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.853"
+                tools:ignore="MissingConstraints" />
 
 
         </android.support.constraint.ConstraintLayout>
