--- a/app/src/main/res/layout/remove_book.xml
+++ b/app/src/main/res/layout/remove_book.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_user"
-    tools:context=".user_home_pages.LibrarianHomePage">
+    tools:context=".pages.RemoveBookPage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -59,14 +59,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/activity_horizontal_margin2"
-                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="Enter Book ID below to remove from inventory"
                 android:textColor="@color/textBlack"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/remove_book_id"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
                 tools:ignore="MissingConstraints" />
 
             <EditText
@@ -74,8 +77,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:backgroundTint="@android:color/black"
                 android:drawableStart="@drawable/ic_book_24dp"
                 android:drawablePadding="15dp"
@@ -84,11 +85,13 @@
                 android:paddingBottom="16dp"
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.75"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="232dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.225"
+                tools:ignore="MissingConstraints" />
 
             <Button
                 android:id="@+id/remove_book_button"
@@ -96,18 +99,21 @@
                 android:layout_height="49dp"
                 android:layout_gravity="bottom"
                 android:layout_margin="24dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="467dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginBottom="534dp"
                 android:background="@drawable/btn_corner"
                 android:backgroundTint="@color/theme1green"
                 android:onClick="removeBookOnClick"
                 android:text="Remove Book"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="451dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="MissingConstraints" />
 
 
         </android.support.constraint.ConstraintLayout>
