--- a/app/src/main/res/layout/return_book.xml
+++ b/app/src/main/res/layout/return_book.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_user"
-    tools:context=".user_home_pages.LibrarianHomePage">
+    tools:context=".pages.ReturnBookPage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,21 +53,22 @@
             android:layout_margin="@dimen/activity_horizontal_margin2"
             android:layout_weight=".75"
             android:orientation="vertical"
-            android:padding="16dp"
-            >
+            android:padding="16dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/activity_horizontal_margin2"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
                 android:text="Enter Book ID to return"
+                android:textColor="@color/textBlack"
                 android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/search_member_id"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="MissingConstraints"
-                android:textColor="@color/textBlack"
-                android:textStyle="bold"/>
+                tools:ignore="MissingConstraints" />
 
             <EditText
                 android:id="@+id/return_book_id"
@@ -75,8 +76,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_margin="16dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:backgroundTint="@android:color/black"
                 android:drawableStart="@drawable/ic_book_24dp"
                 android:drawablePadding="15dp"
@@ -85,10 +84,12 @@
                 android:paddingBottom="16dp"
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.75"
+                app:layout_constraintHorizontal_bias="0.375"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="179dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.225"
                 tools:ignore="MissingConstraints" />
 
             <Button
@@ -97,18 +98,18 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_margin="24dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:background="@drawable/btn_corner"
                 android:backgroundTint="@color/theme1green"
                 android:onClick="returnBookOnClick"
                 android:text="Return Book"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.2"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="425dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.82"
                 tools:ignore="MissingConstraints" />
 
 
